# compact-list

./: .travis.yml  LICENSE  README.md  compact-list.cabal
src/Data/: CompactList.hs
test/: Main.hs
